add dependencies for Camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PDA</string>
+    <string name="app_name">Geld</string>
 
     <string name="accounts_tab_name">Accounts</string>
     <string name="overview_tab_name">Overview</string>
